array.island.Island.scala.error
Compilation error:
Island:7: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
        lvl = lvl +
                  ^